Add CustomException For Handle Error from HttpClient Add New Features;  - IsExistUser  - IsExistRepository  - SetPAT (For Private Repository)  - GetRelease > From Version  - DownloadLatestReleaseAsset > Download only SpecifyAsset Modified Features;  - GetAssetsAsync => DownloadAssetsAsync > Download Asset using API for Private Repository  - GetAssetUrlsAsync => GetAssetsAsync  - CleanVersion > For Change AssemblyVersion  - SemVer => AssemblyVersion > Some Repository Use AseemblyVersion that got error when getting version.  - Move HttpClient Setting to Downloader. i dont think client inside setting.
Add Example Winform Projects

And etc changed.

--- a/src/GitHub.ReleaseDownloader/GitHub.ReleaseDownloader.csproj
+++ b/src/GitHub.ReleaseDownloader/GitHub.ReleaseDownloader.csproj
@@ -41,6 +41,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\APIException.cs" />
+    <Compile Include="Exceptions\APINotFoundException.cs" />
     <Compile Include="IReleaseDownloader.cs" />
     <Compile Include="IReleaseDownloaderSettings.cs" />
     <Compile Include="ReleaseDownloaderSettings.cs" />
